<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="6dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alarm_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_name_label" />

    <EditText
        android:id="@+id/alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints="alarm name"
        android:ems="10"
        android:hint="@string/alarm_name_input_hint"
        android:inputType="textPersonName"
        android:text="@string/alarm_name" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/always_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_active_hint"
        android:layout_marginBottom="12dp"
        android:text="@string/always_active_label" />

    <TextView
        android:id="@+id/alarm_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_time_label" />

    <EditText
        android:id="@+id/alarm_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/alarm_time_input_hint"
        android:inputType="time"
        android:autofillHints="alarm from time" />

    <TextView
        android:id="@+id/alarm_interval_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_interval_label" />

    <Spinner
        android:id="@+id/alarm_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>