<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!-- Opciones del Menu 3 Rayas -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/ic_menu_alarm"
            android:title="@string/menu_alarms" />
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_menu_tracking"
            android:title="@string/menu_tracking"
            app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
            app:showAsAction="always" />
    </group>
</menu>